--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+annotated-types==0.6.0
+anyio==4.3.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
 contourpy==1.1.1
 cycler==0.12.1
+exceptiongroup==1.2.1
+fastapi==0.110.2
 fonttools==4.51.0
+h11==0.14.0
+httptools==0.6.1
 idna==3.7
 importlib-resources==6.4.0
 kiwisolver==1.4.5
@@ -11,11 +18,22 @@ numpy==1.24.4
 packaging==24.0
 pandas==2.0.3
 pillow==10.3.0
+pydantic==2.7.0
+pydantic-core==2.18.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
 requests==2.31.0
 six==1.16.0
+sniffio==1.3.1
+starlette==0.37.2
+typing-extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
 zipp==3.18.1
